highlight stopped line

--- a/webapp/app/globals.css
+++ b/webapp/app/globals.css
@@ -93,3 +93,7 @@ body {
 .breakpoint:not(.verified) {
     background-color: #848484;
 }
+
+.current-line-highlight {
+    background-color: rgba(255, 255, 128, 0.2) !important;
+}
