--- a/app/app/globals.css
+++ b/app/app/globals.css
@@ -97,3 +97,14 @@ body {
 .current-line-highlight {
     background-color: rgba(255, 255, 128, 0.2) !important;
 }
+
+
+
+@layer base {
+  * {
+    @apply border-border outline-ring/50;
+    }
+  body {
+    @apply bg-background text-foreground;
+    }
+}
